# autonomous-annotation-system

devel/: .catkin  .rosinstall
devel/include/mh_hazard/: CLIP.h  CLIPRequest.h  CLIPResponse.h  DetectSlot.h  DetectSlotRequest.h  DetectSlotResponse.h  ImageArray.h  Indicate.h  IndicateRequest.h  IndicateResponse.h  Intrest.h  LLMImage.h  LLMImageRequest.h  LLMImageResponse.h  LLMText.h  LLMTextRequest.h  LLMTextResponse.h  MoveITGrabPose.h  MoveITGrabPoseRequest.h  MoveITGrabPoseResponse.h  MoveITNamedPose.h  MoveITNamedPoseRequest.h  MoveITNamedPoseResponse.h  MoveITPose.h  MoveITPoseRequest.h  MoveITPoseResponse.h  ObjectImage.h  OrientCamera.h  OrientCameraRequest.h  OrientCameraResponse.h  SAM.h  SAMRequest.h  SAMResponse.h  Servo.h  ServoRequest.h  ServoResponse.h  TTS.h  TTSRequest.h  TTSResponse.h  Transcription.h  (+3 more)
devel/lib/explore_lite/: explore
devel/lib/pkgconfig/: explore_lite.pc  mh_hazard.pc  mh_hazard2.pc  multirobot_map_merge.pc
devel/lib/python3/dist-packages/mh_hazard/msg/: _ImageArray.py  _Intrest.py  (+3 more)
devel/share/explore_lite/cmake/: explore_liteConfig.cmake
devel/share/mh_hazard/cmake/: mh_hazard-msg-extras.cmake  mh_hazard-msg-paths.cmake  mh_hazardConfig.cmake
devel/share/mh_hazard2/cmake/: mh_hazard2Config.cmake
devel/share/mh_hazard3/cmake/: mh_hazard3-msg-paths.cmake
devel/share/multirobot_map_merge/cmake/: multirobot_map_mergeConfig.cmake
devel/share/roseus/ros/mh_hazard/: manifest.l
src/mh_hazard/: CMakeLists.txt  package.xml
src/mh_hazard/launch/: rtab-mapping.launch
src/mh_hazard/src/: gpt_service.py  llm_client.py
(+87 files in other folders)
